--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest-preset-angular": "~15.0.0",
     "jest-util": "^30.0.2",
     "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "^20.2.0",
     "nx": "21.4.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.4.0",
